tests/pp-fail/error_directive_unicode.fl.0.exp
Error: error_directive_unicode.fl(1,1): \error: this is
an error 
\error "this is\u0000000Aan error"
^                                  
