tests/pp-fail/error_directive_unicode.fl
\error "this is\u0000000Aan error"
